--- a/gb/21/1/10/n12678349.md
+++ b/gb/21/1/10/n12678349.md
@@ -1,65 +1,72 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rnjpct3368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rnjpct3368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rnjpct3368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rnjpct3368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rnjpct3368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rnjpct3368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rnjpct3368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rnjpct3368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rnjpct3368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rnjpct3368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rnjpct3368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rnjpct3368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rnjpct3368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rnjpct3368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rnjpct3368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rnjpct3368/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rnjpct3368/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rnjpct3368/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rnjpct3368/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rnjpct3368/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rnjpct3368/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rnjpct3368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rnjpct3368/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rnjpct3368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>亚马逊周日关闭Parler服务器</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>围剿川粉？Amazon将关Parler服务器</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1157403467-600x400.jpg" />
-<h6>备受川普（特朗普）支持者欢迎的社交媒体应用程序Parler的CEO周六（1月9日）晚表示，亚马逊将在周日关闭Parler的服务器。 (DENIS CHARLET/AFP via Getty Images)
+<h6>倍受川普（特朗普）支持者欢迎的社交媒体应用程序Parler的CEO2021年1月9日晚表示，亚马逊将在周日关闭Parler的服务器。(DENIS CHARLET/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年01月10日讯】（大纪元记者林燕综合报导）继谷歌、<ahref="https://github.com/rnjpct3368/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>从各自应用程序商店下架备受川普（特朗普）支持者欢迎的社交媒体应用程序Parler后，Parler的CEO周六（1月9日）晚表示，<ahref="https://github.com/rnjpct3368/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>将在周日关闭Parler的服务器。</p>
-<p>Parler的CEO约翰?马兹（John Matze）发表声明说：“周日（1月10日）午夜，<ahref="https://github.com/rnjpct3368/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>将关闭我们所有的服务器，试图彻底消灭互联网上的自由言论。我们在从零开始重建过程，Parler有可能在互联网上无法使用长达一周的时间。我们为这样的情况做了准备，不再依赖亚马逊专有的基础设施，并建立裸机产品。</p>
-<p>“我们现在会尽力转移到新的供应商，有很多供应商在竞争想拿下我们的业务，但亚马逊、谷歌和<ahref="https://github.com/rnjpct3368/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>故意这样做；这是他们的一项协调努力，他们认为，我们的选择将有限，也认为这将造成最大损害，因为川普（特朗普）总统被禁止在科技公司的平台发声。</p>
+	<p>【大纪元2021年01月10日讯】（大纪元记者林燕综合报导）继谷歌、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>从各自应用程序商店下架倍受川普（特朗普）支持者欢迎的社交媒体应用程序Parler后，Parler的CEO周六（1月9日）晚表示，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>将在周日关闭Parler的服务器。</p>
+<p>Parler的CEO约翰?马兹（John Matze）最早发表的声明说：“周日（1月10日）午夜，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>将关闭我们所有的服务器，试图彻底消灭互联网上的自由言论。我们在从零开始重建过程，Parler有可能在互联网上无法使用长达一周的时间。我们为这样的情况做了准备，不再依赖亚马逊专有的基础设施，并建立裸机产品。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow:hidden;"><a style="width: 100%; height: 170px;" frameborder="no" scrolling="no" seamless src="https://player.captivate.fm/episode/e985973d-cc25-4876-a2ca-b5526f28094f"></a></div>
+<p><strong>（听更多新闻请至<ahref="https://github.com/eizauy3553/djy/blob/master/gb/podcast.md#1">“听纪元”</a>）</strong></p>
+<p>“我们现在会尽力转移到新的供应商，有很多供应商在竞争，想拿下我们的业务。但亚马逊、谷歌和<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>故意这样做，这是他们的一项协调努力，他们认为，我们的选择将有限，也认为这将造成最大损害，因为川普（特朗普）总统被禁止在科技公司的平台发声。</p>
 <p>“这是科技巨头们为了扼杀市场竞争而进行的协调攻击。（因为）我们成功得太快了。你可以预计，对竞争和言论自由的战争会继续进行，但别以为我们会出局。”</p>
-<p>周六晚（1月9日），苹果其iPhone App Store中删除了应用程序Parler，Parler受到川普支持者的欢迎。</p>
-<p>这款应用程序也被称为“言论自由”社交媒体平台。自谷歌周五将Parler从其Android应用商店Google Play中删除后，周六，Parler在Apple App Store的免费应用程序中下载量排名第一。</p>
-<p>苹果公司代表在一份声明中说：“我们一直支持在App Store中代表不同的观点，但在我们的平台上没有暴力威胁和非法活动威胁。”</p>
-<p>“ Parler没有采取足够措施来解决这些造成人们安全的威胁。在他们解决这些问题之前，我们已将Parler从App Store中停用。”</p>
-<p>福克斯新闻报导，两名消息人士透露，保守派媒体“联邦党人”（The Federalist）联合创始人肖恩?戴维斯（Sean Davis）周五在<ahref="https://github.com/rnjpct3368/djy/blob/master/gb/tag/%E6%8E%A8%E7%89%B9.md#1">推特</a>上说，苹果要求Parler参与“审查政策”或面临下架。</p>
+<p>周六晚（1月9日），苹果在其应用程序商店中删除了应用程序Parler，Parler受到川普总统支持者的欢迎。</p>
+<p>这款应用程序也被称为“言论自由”社交媒体平台。自谷歌周五将Parler从其Android应用商店Google Play中删除后，周六，Parler在苹果应用程序商店的免费应用程序中下载量排名第一。</p>
+<p>苹果公司代表在一份声明中说：“我们一直支持在App Store中代表不同的观点，但在我们的平台上没有暴力威胁和非法活动威胁。”“Parler没有采取足够措施来解决这些造成人们安全的威胁。在他们解决这些问题之前，我们已将Parler从应用程序商店中停用。”</p>
+<p>福克斯新闻报导，两名消息人士透露，保守派媒体“联邦党人”（The Federalist）联合创始人肖恩?戴维斯（Sean Davis）周五在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8E%A8%E7%89%B9.md#1">推特</a>上说，苹果要求Parler参与“审查政策”或面临下架。</p>
 <p>Parler于2018年推出。Parler首席执行官约翰?马兹在2020年6月说：“我们是一个社区城市广场，一个开放的城市广场，没有审查制度。”</p>
-<p>“你可以在纽约大街上说的话，你也可以在Parler上说。” 马特泽说。</p>
-<p>通过Web浏览器仍可以访问Parler，Apple先前曾指出，web浏览器是无需苹果批准，吸引iPhone用户的一种方法。</p>
+<p>“你可以在纽约大街上说的话，你也可以在Parler上说。”马兹说。</p>
+<p>通过Web浏览器仍可以访问Parler，苹果先前曾说，Web浏览器是无需苹果批准、吸引iPhone用户的一种方法。</p>
+<p>马兹9日晚发布的最新一次声明，包括用户如何帮到Parler的建议：<br />
+1）周二可回到Parler.com或使用侧面加载的android版本或使用已安装的Parler版本。<br />
+2）检查电子邮件和垃圾邮件中是否有来自Parler的消息。<br />
+3）给两党的国会议员和参议员打电话，写信和给他们发电子邮件，并揭露这种反竞争行为。<br />
+4）不要留下愤怒的讯息，但可以通过邮件和电话向亚马逊、谷歌、苹果礼貌地投诉。</p>
+<p>他乐观地说：“在亚马逊突然取消（Parler）访问后，我们应该不到12个小时就能再次正常运行。”</p>
 <p>责任编辑：林妍#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/3/n12664169.md#1">川普宣布将参加1月6日“历史性”集会</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/6/n12671553.md#1">【更新】川普被噤声后首次放出视频发言</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/8/n12676806.md#1">推特永久冻结账号 川普将自行搭建平台发声</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/9/n12677108.md#1">高科技公司齐上阵审查言论 帕勒CEO谴责</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/3/n12664169.md#1">川普宣布将参加1月6日“历史性”集会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/6/n12671553.md#1">【更新】川普被噤声后首次放出视频发言</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/8/n12676806.md#1">推特永久冻结账号 川普将自行搭建平台发声</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/9/n12677108.md#1">高科技公司齐上阵审查言论 帕勒CEO谴责</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280869.md#1" target="_blank">谴责中共活摘器官 美密苏里州通过决议案</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9970937.md#1" target="_blank">严家伟：访“共产主义接班人”的集体大坟场</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262985.md#1" target="_blank">一份传单圆梦 罗马青年吁中国人脱离暴政</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/20/10/3/n12449907.md#1">《圣经》与《推背图》预言的应验与变换12</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/3/n12663595.md#1">屡遭YouTube删片 印度爆红占星师开设网站</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/4/n12665193.md#1">超逼真写实油画 描绘生活中的小小珍宝</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/20/12/27/n12647950.md#1">偶然的天意？康熙时钱币的预示</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/8/n12675971.md#1">【新闻大家谈】极左头目闯国会 美何去何从</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/10/n12678164.md#1">【唐青看时事】习打虎保权 中南海今年如履薄冰</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/9/n12676819.md#1">【秦鹏直播】佩洛西抢核按钮？美国防部官员偷笑</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/8/n12674609.md#1">【翻墙必看】中共政治局常委会再爆内斗</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/7/n12674368.md#1">佩洛西：若彭斯和内阁不行动 将弹劾川普</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/8/n12675056.md#1">全台下雪地图一次掌握 超美银白世界</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/7/n12672836.md#1">陪同小甜甜登记结婚 王宇婕泛泪：好替她开心</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/7/n12673990.md#1">被农民大妈追问月薪 杨超越只敢抽象说两个字</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/8/n12676634.md#1">刘嘉玲自曝有洁癖 拍戏时曾换掉酒店房间马桶</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/7/n12674191.md#1">陪朋友试镜 结果自己被选上出道的5位明星</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/8/n12674476.md#1">张卫健留港陪伴母亲 因疫情与妻子分隔近一年</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/7/n12672247.md#1">脂肪肝不是胖才有！每天做2件事 逆转脂肪肝</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/7/n12673448.md#1">“翠鸟对峙”精彩照 获英国摄影大赛冠军</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/7/n12672435.md#1">【重播】人体科学揭密：什么人容易染疫？</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/7/n12672192.md#1">冬令进补四神汤最养生 正确炖煮才有效</a></li>
-<li><a href="https://github.com/rnjpct3368/djy/blob/master/gb/21/1/9/n12677405.md#1">波兰房屋起火 “守护天使”盘旋空中</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rnjpct3368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rnjpct3368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/10/n12678349.htm">亚马逊周日关闭Parler服务器</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/10/n12678349.htm">围剿川粉？Amazon将关Parler服务器</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rnjpct3368/djy/blob/master/gb/21/1/10/n12678349.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rnjpct3368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rnjpct3368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rnjpct3368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rnjpct3368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnjpct3368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/1/10/n12678349.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
